--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     .btn.warn{background:linear-gradient(180deg,#f59e0b,#d97706);border-color:rgba(249,115,22,0.9)}
     .btn.danger{background:linear-gradient(180deg,#ef4444,#dc2626);border-color:rgba(239,68,68,0.9)}
 
-    .players{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:12px}
+    .players{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px;margin-top:12px}
     @media (max-width:700px){.players{grid-template-columns:repeat(2,1fr)}}
     .p{background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));border-radius:12px;padding:12px;border:1px solid rgba(255,255,255,0.02);position:relative;min-height:92px}
     .p h3{margin:0 0 6px 0;font-size:15px}
@@ -87,7 +87,7 @@
         <div class="logo">🐒</div>
         <div>
           <h1>لعبة القِرد — غرف أونلاين</h1>
-          <div class="sub">إنشئ غرفة، ادعُ ٤ لاعبين، والعبوا بنفس القواعد.</div>
+          <div class="sub">إنشئ غرفة، ادعُ ٣ أو ٤ لاعبين، والعبوا بنفس القواعد.</div>
         </div>
       </div>
 
@@ -112,7 +112,7 @@
           <input id="roomCode" class="txt" placeholder="كود غرفة (6 أحرف)" maxlength="6" style="max-width:220px"/>
           <button id="joinRoom" class="btn primary">🔗 انضمام</button>
         </div>
-        <div class="tiny">لو بَقِيت ٤ لاعبين، يقدر المضيف يبدأ اللعب.</div>
+        <div class="tiny">لو بَقِت ٣ أو ٤ لاعبين، يقدر المضيف يبدأ اللعب.</div>
 
         <hr style="border-color:rgba(255,255,255,0.03);margin:14px 0">
 
@@ -298,7 +298,7 @@
       const playersSnap = await get(ref(db, `rooms/${code}/players`));
       const players = playersSnap.exists()? playersSnap.val(): {};
       const pCount = Object.keys(players).length;
-      if(pCount>=4 && !players[UID]){ alert('الغرفة ممتلئة (٤ لاعبين).'); return; }
+      if(pCount>=4 && !players[UID]){ alert('الغرفة ممتلئة (٤ لاعبين كحد أقصى).'); return; }
 
       const name = auth.currentUser?.displayName || 'لاعب';
       await update(ref(db, `rooms/${code}/players/${UID}`), {
@@ -369,7 +369,7 @@
       if(!ROOM) return;
       const r = (await get(ref(db, `rooms/${ROOM}`))).val();
       const count = (r.order||[]).length;
-      if(count!==4){ alert('لازم ٤ لاعبين للبدء.'); return; }
+      if(count<3){ alert('لازم ٣ لاعبين على الأقل للبدء.'); return; }
       if(r.host!==UID){ alert('فقط المضيف يستطيع البدء.'); return; }
       await update(ref(db, `rooms/${ROOM}`), { status:'playing', turnIndex: r.starterIndex, prefix:'', secret:'', lastActor: null });
       log('بدأت اللعبة. ينتظر المبتدئ كتابة الاسم السري وبدء الجولة.');
